k8s/manifests/08-statefulset.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stateless-writer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: writer
  template:
    metadata:
      labels:
        app: writer
    spec:
      containers:
        - name: writer
          image: busybox
          command: ["sh", "-c", "mkdir -p /data && sleep 3600"]
